(library
   (name ReplTest)
   (public_name monkey-reason.test)
   (flags :standard -w -33 -safe-string -rectypes)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries rely.lib console.lib monkey)
   (modules (:standard \ RunTests))
)

(executable
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (name RunTests)
  (modes byte)
  (link_flags (:standard -linkall))
  (flags :standard -w -33 -safe-string -rectypes)
  (public_name RunTests.exe)
  (libraries
    monkey-reason.test
    rely.lib
    console.lib
  )
  (modules RunTests)
)
